--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </div>
   <div data-key="75" class="key">
     <kbd>K</kbd>
-    <span class="sound">hithat</span>
+    <span class="sound">hihat</span>
   </div>
   <div data-key="76" class="key">
     <kbd>L</kbd>
@@ -46,18 +46,17 @@
   </div>
 </div>
 
-<audio data-key="65" src=""></audio>
-<audio data-key="83" src=""></audio>
-<audio data-key="68" src=""></audio>
-<audio data-key="70" src=""></audio>
-<audio data-key="71" src=""></audio>
-<audio data-key="72" src=""></audio>
-<audio data-key="74" src=""></audio>
-<audio data-key="75" src=""></audio>
-<audio data-key="76" src=""></audio>
+<audio data-key="65" src="sound/tink.wav"></audio>
+<audio data-key="83" src="sound/tom.wav"></audio>
+<audio data-key="68" src="sound/snare.wav"></audio>
+<audio data-key="70" src="sound/ride.wav"></audio>
+<audio data-key="71" src="sound/boom.wav"></audio>
+<audio data-key="72" src="sound/openhat.wat"></audio>
+<audio data-key="74" src="sound/kick.wav"></audio>
+<audio data-key="75" src="sound/hihat.wav"></audio>
+<audio data-key="76" src="sound/clap.wav"></audio>
 
-<script>
-</script>
+<script src="scripts.js"></script>
 
 </body>
 </html>
