Updated sound source

--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
   </div>
 </div>
 
-<audio data-key="65" src="sound/tink.wav"></audio>
-<audio data-key="83" src="sound/tom.wav"></audio>
-<audio data-key="68" src="sound/snare.wav"></audio>
-<audio data-key="70" src="sound/ride.wav"></audio>
-<audio data-key="71" src="sound/boom.wav"></audio>
-<audio data-key="72" src="sound/openhat.wat"></audio>
-<audio data-key="74" src="sound/kick.wav"></audio>
-<audio data-key="75" src="sound/hihat.wav"></audio>
-<audio data-key="76" src="sound/clap.wav"></audio>
+<audio data-key="65" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1147877/tink.wav"></audio>
+<audio data-key="83" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1147877/tom.wav"></audio>
+<audio data-key="68" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1147877/snare.wav"></audio>
+<audio data-key="70" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1147877/ride.wav"></audio>
+<audio data-key="71" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1147877/boom.wav"></audio>
+<audio data-key="72" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1147877/openhat.wav"></audio>
+<audio data-key="74" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1147877/kick.wav"></audio>
+<audio data-key="75" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1147877/hihat.wav"></audio>
+<audio data-key="76" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1147877/clap.wav"></audio>
 
 <script src="scripts.js"></script>
 
