--- a/css-variable/index.html
+++ b/css-variable/index.html
@@ -11,17 +11,17 @@
 
 <div class="controls">
   <label for="spacing">Spacing:</label>
-  <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
+  <input id="spacing" type="range" name="spacing" min="15" max="200" value="10" data-sizing="px">
 	
   <label for="blur">Blur:</label>
   <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
 	
   <label for="base">Base:</label>
-  <input id="base" type="color" name="base" value="#ffc510">
+  <input id="base" type="color" name="base" value="#6718a0">
 </div>
 
-<img src="">
+<img src="https://www.straitstimes.com/sites/default/files/styles/article_pictrure_780x520_/public/articles/2018/09/25/nz-korea-250918.jpg?itok=KNwQZbJW&timestamp=1537835539" alt="BTS UN">
 	
-<script></script>
+<script src="scripts.js"></script>
 </body>
 </html>
