--- a/fun-with-html5-canvas/index.html
+++ b/fun-with-html5-canvas/index.html
@@ -5,20 +5,15 @@
   <meta charset="UTF-8">
   <title>#JavaScript30 - Fun with HTML5 Canvas</title>
   
-  
-  
-      <link rel="stylesheet" href="css/style.css">
-
-  
+  <link rel="stylesheet" href="css/style.css">
+ 
 </head>
 
 <body>
-
+  <h1 id="title">Drawing Canvas</h1>
   <canvas id="draw" width="800" height="800"></canvas>
-  
-  
-
-    <script  src="js/index.js"></script>
+   
+  <script  src="js/index.js"></script>
 
 
 
