Update main page

--- a/dev-tools-tricks/index.html
+++ b/dev-tools-tricks/index.html
@@ -4,26 +4,49 @@
 <head>
   <meta charset="UTF-8">
   <title>#JavaScript30 - Dev Tools Tricks</title>
-  
-  
-  
-  
-  
 </head>
 
 <body>
 
-  <title>Console Tricks!</title>
+<h1>14 Must Know Dev Tools Tricks</h1>
 
 <p onClick="makeGreen()">xBREAKxDOWNx</p>
-  
-  
 
-    <script  src="js/index.js"></script>
+<h3 class="exercise">Regular</h3>
+<div id='regular'></div>
 
+<h3 class="exercise">Interpolated</h3>
+<div id='inter'></div>
 
+<h3 class="exercise">Styled</h3>
+<div id='styled'></div>
 
+<h3 class="exercise">Warning</h3>
+<div id='warning'></div>
 
+<h3 class="exercise">Error</h3>
+<div id='error'></div>
+
+<h3 class="exercise">Info</h3>
+<div id='info'></div>
+
+<h3 class="exercise">Testing</h3>
+<div id='testing'></div>
+
+<h3 class="exercise">Clearing</h3>
+<div id='clearing'></div>
+
+<h3 class="exercise">Viewing DOM Elements</h3>
+<div id='viewing'></div>
+
+<h3 class="exercise">Grouping Together</h3>
+<div id='grouing'></div>
+
+<h3 class="exercise">Counting</h3>
+<div id='counting'></div>
+
+<h3 class="exercise">Timing</h3>
+<div id='timing'></div>
 </body>
 
 </html>
