add few details

--- a/dev-tools-tricks/index.html
+++ b/dev-tools-tricks/index.html
@@ -10,37 +10,41 @@
 
 <h1>14 Must Know Dev Tools Tricks</h1>
 
+<p>Psst: have a look at the JavaScript Console 🌹</p>
+
 <p onClick="makeGreen()">xBREAKxDOWNx</p>
 
 <h3 class="exercise">Regular</h3>
-<div id='regular'></div>
+<div id='regular'>
+  console.log('hello');
+</div>
 
 <h3 class="exercise">Interpolated</h3>
-<div id='inter'></div>
+<div id='inter'>Hello I am a 💩 string!</div>
 
 <h3 class="exercise">Styled</h3>
-<div id='styled'></div>
+<div id='styled'>Style text with %c.</div>
 
 <h3 class="exercise">Warning</h3>
-<div id='warning'></div>
+<div id='warning'>Gives a warning message in the web console.</div>
 
 <h3 class="exercise">Error</h3>
-<div id='error'></div>
+<div id='error'>Display an error message in the web console.</div>
 
 <h3 class="exercise">Info</h3>
-<div id='info'></div>
+<div id='info'>Gives an info</div>
 
 <h3 class="exercise">Testing</h3>
-<div id='testing'></div>
+<div id='testing'>Use "assert" to check if things are true.</div>
 
 <h3 class="exercise">Clearing</h3>
-<div id='clearing'></div>
+<div id='clearing'>It clears the console.</div>
 
 <h3 class="exercise">Viewing DOM Elements</h3>
-<div id='viewing'></div>
+<div id='viewing'>Displays the available properties or methods of an element.</div>
 
 <h3 class="exercise">Grouping Together</h3>
-<div id='grouing'></div>
+<div id='grouping'></div>
 
 <h3 class="exercise">Counting</h3>
 <div id='counting'></div>
