--- a/dev-tools-tricks/index.html
+++ b/dev-tools-tricks/index.html
@@ -47,10 +47,26 @@
 <div id='grouping'></div>
 
 <h3 class="exercise">Counting</h3>
-<div id='counting'></div>
+<div id='counting'>
+  count() method
+  <p>Count how many times a particular item has been called.</p>
+  <div>console.count('Wes');
+    console.count('Wes');
+    console.count('Steve');
+    console.count('Wes');
+    console.count('Wes');
+    console.count('Steve');
+    console.count('Wes');
+  </div>
+  <div>
+    >> Wes: 5
+    >> Steve: 2
+  </div>
+</div>
 
 <h3 class="exercise">Timing</h3>
 <div id='timing'></div>
+
 </body>
 
 </html>
