--- a/dev-tools-tricks/index.html
+++ b/dev-tools-tricks/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>#JavaScript30 - Dev Tools Tricks</title>
+  <link rel="stylesheet" type="text/css" href="dev_css.css" />
 </head>
 
 <body>
