--- a/custom-html5-video-player/index.html
+++ b/custom-html5-video-player/index.html
@@ -4,16 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>#JavaScript30 - Custom HTML5 Video Player</title>
-  
-  
-  
-      <link rel="stylesheet" href="css/style.css">
-
-  
+     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
   <div class="player">
   <video class="player_video viewer" src="https://www.youtube.com/watch?v=xEeFrLSkMm8&index=2&list=PL-cjVjIpP8l7WSxY60k3zJfdwmUjkfDXi" autoplay></video>
 
@@ -22,20 +16,14 @@
     <div class="progress_filled"></div>
   </div>
   <button class="player_button toggle" title="Toggle Play">►</button>
-  <input type="range" name="volume" class="player_slider" min=0 max="1" step="0.5" value="1">
+  <input type="range" name="volume" class="player_slider" min="0" max="1" step="0.5" value="1">
   <input type="range" name="playbackRate" class="player_slider" min="0.5" max="2" step="0.1" value="1">
   <button data-skip="-10" class="player_button">« 10s</button>
   <button data-skip="-10" class="player_button">25s »</button>
   </div>
   
 </div>
-  
-  
-
-    <script  src="js/index.js"></script>
-
-
-
+   <script  src="js/index.js"></script>
 
 </body>
 
